--- a/DataPreprocessing.ipynb
+++ b/DataPreprocessing.ipynb
@@ -7,9 +7,10 @@
    "outputs": [],
    "source": [
     "# Create preprocessed data table\n",
-    "# TF-IDF and Word Embeddings for Overview\n",
+    "# USE for Overviews\n",
     "# Save all overviews to file for encoding\n",
-    "# Filmweb example data test"
+    "# Filmweb example data test\n",
+    "# XGBoost Regressor with GPU"
    ]
   },
   {
@@ -648,10 +649,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# encoding_type:\n",
-    "# 0 - TF-IDF\n",
-    "# 1 - embeddings\n",
-    "\n",
     "def encode_overview(encoding_type=0):\n",
     "    pass"
    ]
@@ -688,8 +685,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def preprocess_columns(row, name_regex, director_regex, year_regex):\n",
-    "    cast_members = re.findall(name_regex, row['cast'])[:5]\n",
+    "def preprocess_columns(row, name_regex, director_regex, year_regex, cast_member_number, keyword_number):\n",
+    "    cast_members = re.findall(name_regex, row['cast'])\n",
+    "    if len(cast_members) >= cast_member_number:\n",
+    "        cast_members = cast_members[:cast_member_number]\n",
     "    for member in cast_members:\n",
     "        all_cast.add(member)\n",
     "    directors = re.findall(director_regex, row['crew'])\n",
@@ -698,7 +697,9 @@
     "    genres = re.findall(name_regex, row['genres'])\n",
     "    for genre in genres:\n",
     "        all_genres.add(genre)\n",
-    "    keywords = re.findall(name_regex, row['keywords'])[:5]\n",
+    "    keywords = re.findall(name_regex, row['keywords'])\n",
+    "    if len(keywords) >= keyword_number:\n",
+    "        keywords = keywords[:keyword_number]\n",
     "    for keyword in keywords:\n",
     "        all_keywords.add(keyword)\n",
     "    companies = re.findall(name_regex, row['production_companies'])\n",
