--- a/DataPreprocessing.ipynb
+++ b/DataPreprocessing.ipynb
@@ -2,30 +2,69 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create preprocessed data table\n",
     "# USE for Overviews\n",
-    "# Save all overviews to file for encoding\n",
     "# Filmweb example data test\n",
     "# XGBoost Regressor with GPU"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import re"
+    "import re\n",
+    "import os\n",
+    "import numpy as np\n",
+    "\n",
+    "import tensorflow as tf\n",
+    "import tensorflow_hub as hub"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# os.environ[\"TFHUB_CACHE_DIR\"] = r'C:\\Users\\jmay2\\AppData\\Local\\Temp\\tfhub_modules'\n",
+    "# module_url = \"https://tfhub.dev/google/universal-sentence-encoder/3\"\n",
+    "# embed = hub.Module(module_url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "embed = hub.load(r'C:\\Users\\jmay2\\AppData\\Local\\Temp\\tfhub_modules\\42480c3c7f42bf87d36d4c58fc4374b08dae2909')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# paragraph = (\n",
+    "#     \"Universal Sentence Encoder embeddings also support short paragraphs. \"\n",
+    "#     \"There is no hard limit on how long the paragraph is. Roughly, the longer \"\n",
+    "#     \"the more 'diluted' the embedding will be.\")\n",
+    "\n",
+    "# message_embeddings = embed([paragraph])\n",
+    "# print(message_embeddings)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +175,7 @@
        "4  [{\"credit_id\": \"52fe479ac3a36847f813eaa3\", \"de...  "
       ]
      },
-     "execution_count": 80,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -147,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -385,7 +424,7 @@
        "4                               John Carter           6.1        2124  "
       ]
      },
-     "execution_count": 81,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -396,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -414,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -634,7 +673,7 @@
        "4        2124  "
       ]
      },
-     "execution_count": 84,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -645,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -655,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -666,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -681,72 +720,110 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def preprocess_columns(row, name_regex, director_regex, year_regex, cast_member_number, keyword_number):\n",
-    "    cast_members = re.findall(name_regex, row['cast'])\n",
+    "# df['Date'] = df['Date'].apply(convert_to_year)\n",
+    "# my_series.apply(your_function, args=(2,3,4), extra_kw=1)\n",
+    "\n",
+    "def prep_cast(data, name_regex, cast_member_number):\n",
+    "    cast_members = re.findall(name_regex, data)\n",
     "    if len(cast_members) >= cast_member_number:\n",
     "        cast_members = cast_members[:cast_member_number]\n",
     "    for member in cast_members:\n",
     "        all_cast.add(member)\n",
-    "    directors = re.findall(director_regex, row['crew'])\n",
+    "    return cast_members\n",
+    "def prep_directors(data, director_regex):\n",
+    "    directors = re.findall(director_regex, data)\n",
     "    for director in directors:\n",
     "        all_directors.add(director)\n",
-    "    genres = re.findall(name_regex, row['genres'])\n",
+    "    return directors\n",
+    "def prep_genres(data, name_regex):\n",
+    "    genres = re.findall(name_regex, data)\n",
     "    for genre in genres:\n",
     "        all_genres.add(genre)\n",
-    "    keywords = re.findall(name_regex, row['keywords'])\n",
+    "    return genres\n",
+    "def prep_keywords(data, name_regex, keyword_number):\n",
+    "    keywords = re.findall(name_regex, data)\n",
     "    if len(keywords) >= keyword_number:\n",
     "        keywords = keywords[:keyword_number]\n",
     "    for keyword in keywords:\n",
     "        all_keywords.add(keyword)\n",
-    "    companies = re.findall(name_regex, row['production_companies'])\n",
+    "    return keywords\n",
+    "def prep_companies(data, name_regex):\n",
+    "    companies = re.findall(name_regex, data)\n",
     "    for company in companies:\n",
     "        all_companies.add(company)\n",
-    "    countries = re.findall(name_regex, row['production_countries'])\n",
+    "    return companies\n",
+    "def prep_countries(data, name_regex):\n",
+    "    countries = re.findall(name_regex, data)\n",
     "    for country in countries:\n",
     "        all_countries.add(country)\n",
-    "    languages = re.findall(name_regex, row['spoken_languages'])\n",
+    "    return countries\n",
+    "def prep_languages(data, name_regex):\n",
+    "    languages = re.findall(name_regex, data)\n",
     "    for language in languages:\n",
     "        all_languages.add(language)\n",
-    "    year = int(re.search(year_regex, row['release_date']).group())\n",
-    "    return cast_members, directors, genres, keywords, companies, countries, languages, year"
+    "    return languages\n",
+    "def prep_year(data, year_regex):\n",
+    "    year = int(re.search(year_regex, data).group())\n",
+    "    return year"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(['Sam Worthington',\n",
-       "  'Zoe Saldana',\n",
-       "  'Sigourney Weaver',\n",
-       "  'Stephen Lang',\n",
-       "  'Michelle Rodriguez'],\n",
-       " ['James Cameron'],\n",
-       " ['Action', 'Adventure', 'Fantasy', 'Science Fiction'],\n",
-       " ['culture clash', 'future', 'space war', 'space colony', 'society'],\n",
-       " ['Ingenious Film Partners',\n",
-       "  'Twentieth Century Fox Film Corporation',\n",
-       "  'Dune Entertainment',\n",
-       "  'Lightstorm Entertainment'],\n",
-       " ['United States of America', 'United Kingdom'],\n",
-       " ['English'],\n",
-       " 2009)"
-      ]
-     },
-     "execution_count": 99,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "preprocess_columns(data_selected.iloc[0], name_regex, director_regex, year_regex)"
+    "# def preprocess_columns(row, name_regex, director_regex, year_regex, cast_member_number, keyword_number):\n",
+    "#     cast_members = re.findall(name_regex, row['cast'])\n",
+    "#     if len(cast_members) >= cast_member_number:\n",
+    "#         cast_members = cast_members[:cast_member_number]\n",
+    "#     for member in cast_members:\n",
+    "#         all_cast.add(member)\n",
+    "#     directors = re.findall(director_regex, row['crew'])\n",
+    "#     for director in directors:\n",
+    "#         all_directors.add(director)\n",
+    "#     genres = re.findall(name_regex, row['genres'])\n",
+    "#     for genre in genres:\n",
+    "#         all_genres.add(genre)\n",
+    "#     keywords = re.findall(name_regex, row['keywords'])\n",
+    "#     if len(keywords) >= keyword_number:\n",
+    "#         keywords = keywords[:keyword_number]\n",
+    "#     for keyword in keywords:\n",
+    "#         all_keywords.add(keyword)\n",
+    "#     companies = re.findall(name_regex, row['production_companies'])\n",
+    "#     for company in companies:\n",
+    "#         all_companies.add(company)\n",
+    "#     countries = re.findall(name_regex, row['production_countries'])\n",
+    "#     for country in countries:\n",
+    "#         all_countries.add(country)\n",
+    "#     languages = re.findall(name_regex, row['spoken_languages'])\n",
+    "#     for language in languages:\n",
+    "#         all_languages.add(language)\n",
+    "#     year = int(re.search(year_regex, row['release_date']).group())\n",
+    "#     return cast_members, directors, genres, keywords, companies, countries, languages, year"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# preprocess_columns(data_selected.iloc[0], name_regex, director_regex, year_regex, 5, 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# message_embeddings = embed([data_selected.iloc[0]['overview']])\n",
+    "# print(message_embeddings)"
    ]
   },
   {
@@ -773,7 +850,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.5"
   }
  },
  "nbformat": 4,
