Data preprocessing code added

--- a/DataPreprocessing.ipynb
+++ b/DataPreprocessing.ipynb
@@ -6,10 +6,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create preprocessed data table\n",
     "# USE for Overviews\n",
     "# Filmweb example data test\n",
-    "# XGBoost Regressor with GPU"
+    "# XGBoost Regressor with GPU\n",
+    "# Choose features based on correlations from article\n",
+    "# Dataset from the same article"
    ]
   },
   {
@@ -23,8 +24,8 @@
     "import os\n",
     "import numpy as np\n",
     "\n",
-    "import tensorflow as tf\n",
-    "import tensorflow_hub as hub"
+    "# import tensorflow as tf\n",
+    "# import tensorflow_hub as hub"
    ]
   },
   {
@@ -40,16 +41,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "embed = hub.load(r'C:\\Users\\jmay2\\AppData\\Local\\Temp\\tfhub_modules\\42480c3c7f42bf87d36d4c58fc4374b08dae2909')"
+    "# embed = hub.load(r'C:\\Users\\jmay2\\AppData\\Local\\Temp\\tfhub_modules\\42480c3c7f42bf87d36d4c58fc4374b08dae2909')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -175,7 +176,7 @@
        "4  [{\"credit_id\": \"52fe479ac3a36847f813eaa3\", \"de...  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -424,7 +425,7 @@
        "4                               John Carter           6.1        2124  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -435,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -453,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -673,7 +674,7 @@
        "4        2124  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -684,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -694,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -705,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -720,13 +721,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# df['Date'] = df['Date'].apply(convert_to_year)\n",
-    "# my_series.apply(your_function, args=(2,3,4), extra_kw=1)\n",
-    "\n",
     "def prep_cast(data, name_regex, cast_member_number):\n",
     "    cast_members = re.findall(name_regex, data)\n",
     "    if len(cast_members) >= cast_member_number:\n",
@@ -773,38 +771,279 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def remove_empty_rows(df):\n",
+    "    df = df.dropna()\n",
+    "    df = df[df['cast'] != '[]']\n",
+    "    df = df[df['crew'] != '[]']\n",
+    "    df = df[df['genres'] != '[]']\n",
+    "    df = df[df['keywords'] != '[]']\n",
+    "    df = df[df['production_companies'] != '[]']\n",
+    "    df = df[df['production_countries'] != '[]']\n",
+    "    df = df[df['spoken_languages'] != '[]']\n",
+    "    df = df[df['budget'] != 0]\n",
+    "    df = df[df['runtime'] != 0]\n",
+    "    df = df[df['vote_average'] != 0]\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def preprocess_data_first_stage(df, name_regex, director_regex, year_regex, cast_member_number, keyword_number):\n",
+    "    df = remove_empty_rows(df)\n",
+    "    df['cast'] = df['cast'].apply(lambda x: prep_cast(x, name_regex, cast_member_number))\n",
+    "    df['directors'] = df['crew'].apply(lambda x: prep_directors(x, director_regex))\n",
+    "    df = df[df['directors'] != '[]']\n",
+    "    df['genres'] = df['genres'].apply(lambda x: prep_genres(x, name_regex))\n",
+    "    df['keywords'] = df['keywords'].apply(lambda x: prep_keywords(x, name_regex, keyword_number))\n",
+    "    df['production_companies'] = df['production_companies'].apply(lambda x: prep_companies(x, name_regex))\n",
+    "    df['production_countries'] = df['production_countries'].apply(lambda x: prep_countries(x, name_regex))\n",
+    "    df['spoken_languages'] = df['spoken_languages'].apply(lambda x: prep_languages(x, name_regex))\n",
+    "    df['year'] = df['release_date'].astype(str).apply(lambda x: prep_year(x, year_regex))\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# message_embeddings = embed([data_selected.iloc[0]['overview']])\n",
+    "# print(message_embeddings)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "first_preprocessing = preprocess_data_first_stage(data_selected, name_regex, director_regex, year_regex, 5, 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "first_preprocessing = first_preprocessing[['cast', 'directors', 'budget', 'genres', 'keywords', 'production_companies', 'production_countries', 'runtime', 'spoken_languages', 'year', 'vote_average']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>cast</th>\n",
+       "      <th>directors</th>\n",
+       "      <th>budget</th>\n",
+       "      <th>genres</th>\n",
+       "      <th>keywords</th>\n",
+       "      <th>production_companies</th>\n",
+       "      <th>production_countries</th>\n",
+       "      <th>runtime</th>\n",
+       "      <th>spoken_languages</th>\n",
+       "      <th>year</th>\n",
+       "      <th>vote_average</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>[Sam Worthington, Zoe Saldana, Sigourney Weave...</td>\n",
+       "      <td>[James Cameron]</td>\n",
+       "      <td>237000000</td>\n",
+       "      <td>[Action, Adventure, Fantasy, Science Fiction]</td>\n",
+       "      <td>[culture clash, future, space war, space colon...</td>\n",
+       "      <td>[Ingenious Film Partners, Twentieth Century Fo...</td>\n",
+       "      <td>[United States of America, United Kingdom]</td>\n",
+       "      <td>162.0</td>\n",
+       "      <td>[English]</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>7.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>[Johnny Depp, Orlando Bloom, Keira Knightley, ...</td>\n",
+       "      <td>[Gore Verbinski]</td>\n",
+       "      <td>300000000</td>\n",
+       "      <td>[Adventure, Fantasy, Action]</td>\n",
+       "      <td>[ocean, drug abuse, exotic island, east india ...</td>\n",
+       "      <td>[Walt Disney Pictures, Jerry Bruckheimer Films...</td>\n",
+       "      <td>[United States of America]</td>\n",
+       "      <td>169.0</td>\n",
+       "      <td>[English]</td>\n",
+       "      <td>2007</td>\n",
+       "      <td>6.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>[Daniel Craig, Christoph Waltz, Ralph Fiennes,...</td>\n",
+       "      <td>[Sam Mendes]</td>\n",
+       "      <td>245000000</td>\n",
+       "      <td>[Action, Adventure, Crime]</td>\n",
+       "      <td>[spy, based on novel, secret agent, sequel, br...</td>\n",
+       "      <td>[Columbia Pictures, Danjaq]</td>\n",
+       "      <td>[United Kingdom, United States of America]</td>\n",
+       "      <td>148.0</td>\n",
+       "      <td>[English, Italiano, Deutsch]</td>\n",
+       "      <td>2015</td>\n",
+       "      <td>6.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>[Christian Bale, Michael Caine, Gary Oldman, A...</td>\n",
+       "      <td>[Christopher Nolan]</td>\n",
+       "      <td>250000000</td>\n",
+       "      <td>[Action, Crime, Drama, Thriller]</td>\n",
+       "      <td>[dc comics, crime fighter, terrorist, secret i...</td>\n",
+       "      <td>[Legendary Pictures, DC Entertainment, Syncopy]</td>\n",
+       "      <td>[United States of America]</td>\n",
+       "      <td>165.0</td>\n",
+       "      <td>[English]</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>7.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>[Taylor Kitsch, Lynn Collins, Samantha Morton,...</td>\n",
+       "      <td>[Andrew Stanton]</td>\n",
+       "      <td>260000000</td>\n",
+       "      <td>[Action, Adventure, Science Fiction]</td>\n",
+       "      <td>[based on novel, mars, medallion, space travel...</td>\n",
+       "      <td>[Walt Disney Pictures]</td>\n",
+       "      <td>[United States of America]</td>\n",
+       "      <td>132.0</td>\n",
+       "      <td>[English]</td>\n",
+       "      <td>2012</td>\n",
+       "      <td>6.1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                cast            directors  \\\n",
+       "0  [Sam Worthington, Zoe Saldana, Sigourney Weave...      [James Cameron]   \n",
+       "1  [Johnny Depp, Orlando Bloom, Keira Knightley, ...     [Gore Verbinski]   \n",
+       "2  [Daniel Craig, Christoph Waltz, Ralph Fiennes,...         [Sam Mendes]   \n",
+       "3  [Christian Bale, Michael Caine, Gary Oldman, A...  [Christopher Nolan]   \n",
+       "4  [Taylor Kitsch, Lynn Collins, Samantha Morton,...     [Andrew Stanton]   \n",
+       "\n",
+       "      budget                                         genres  \\\n",
+       "0  237000000  [Action, Adventure, Fantasy, Science Fiction]   \n",
+       "1  300000000                   [Adventure, Fantasy, Action]   \n",
+       "2  245000000                     [Action, Adventure, Crime]   \n",
+       "3  250000000               [Action, Crime, Drama, Thriller]   \n",
+       "4  260000000           [Action, Adventure, Science Fiction]   \n",
+       "\n",
+       "                                            keywords  \\\n",
+       "0  [culture clash, future, space war, space colon...   \n",
+       "1  [ocean, drug abuse, exotic island, east india ...   \n",
+       "2  [spy, based on novel, secret agent, sequel, br...   \n",
+       "3  [dc comics, crime fighter, terrorist, secret i...   \n",
+       "4  [based on novel, mars, medallion, space travel...   \n",
+       "\n",
+       "                                production_companies  \\\n",
+       "0  [Ingenious Film Partners, Twentieth Century Fo...   \n",
+       "1  [Walt Disney Pictures, Jerry Bruckheimer Films...   \n",
+       "2                        [Columbia Pictures, Danjaq]   \n",
+       "3    [Legendary Pictures, DC Entertainment, Syncopy]   \n",
+       "4                             [Walt Disney Pictures]   \n",
+       "\n",
+       "                         production_countries  runtime  \\\n",
+       "0  [United States of America, United Kingdom]    162.0   \n",
+       "1                  [United States of America]    169.0   \n",
+       "2  [United Kingdom, United States of America]    148.0   \n",
+       "3                  [United States of America]    165.0   \n",
+       "4                  [United States of America]    132.0   \n",
+       "\n",
+       "               spoken_languages  year  vote_average  \n",
+       "0                     [English]  2009           7.2  \n",
+       "1                     [English]  2007           6.9  \n",
+       "2  [English, Italiano, Deutsch]  2015           6.3  \n",
+       "3                     [English]  2012           7.6  \n",
+       "4                     [English]  2012           6.1  "
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "first_preprocessing.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(6664, 1594)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(all_cast), len(all_directors)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_one_hot_encoding_dict(data):\n",
+    "    dictionary = {data[i] : i for i in range(0, len(data))}\n",
+    "    return dictionary"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# def preprocess_columns(row, name_regex, director_regex, year_regex, cast_member_number, keyword_number):\n",
-    "#     cast_members = re.findall(name_regex, row['cast'])\n",
-    "#     if len(cast_members) >= cast_member_number:\n",
-    "#         cast_members = cast_members[:cast_member_number]\n",
-    "#     for member in cast_members:\n",
-    "#         all_cast.add(member)\n",
-    "#     directors = re.findall(director_regex, row['crew'])\n",
-    "#     for director in directors:\n",
-    "#         all_directors.add(director)\n",
-    "#     genres = re.findall(name_regex, row['genres'])\n",
-    "#     for genre in genres:\n",
-    "#         all_genres.add(genre)\n",
-    "#     keywords = re.findall(name_regex, row['keywords'])\n",
-    "#     if len(keywords) >= keyword_number:\n",
-    "#         keywords = keywords[:keyword_number]\n",
-    "#     for keyword in keywords:\n",
-    "#         all_keywords.add(keyword)\n",
-    "#     companies = re.findall(name_regex, row['production_companies'])\n",
-    "#     for company in companies:\n",
-    "#         all_companies.add(company)\n",
-    "#     countries = re.findall(name_regex, row['production_countries'])\n",
-    "#     for country in countries:\n",
-    "#         all_countries.add(country)\n",
-    "#     languages = re.findall(name_regex, row['spoken_languages'])\n",
-    "#     for language in languages:\n",
-    "#         all_languages.add(language)\n",
-    "#     year = int(re.search(year_regex, row['release_date']).group())\n",
-    "#     return cast_members, directors, genres, keywords, companies, countries, languages, year"
+    "cast_encoder = create_one_hot_encoding_dict(list(all_cast))\n",
+    "directors_encoder = create_one_hot_encoding_dict(list(all_directors))"
    ]
   },
   {
@@ -813,17 +1052,65 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# preprocess_columns(data_selected.iloc[0], name_regex, director_regex, year_regex, 5, 5)"
+    "def encode_data(data, cast_encoder, directors_encoder):\n",
+    "    preprocessed_data = np.zeros(shape=(data.shape[0],len(cast_encoder)+len(directors_encoder)+4))\n",
+    "    for index, row in data.reset_index(drop=True).iterrows():\n",
+    "        cast = np.zeros((len(cast_encoder)))\n",
+    "        directors = np.zeros((len(directors_encoder)))\n",
+    "        for item in row['cast']:\n",
+    "            cast[cast_encoder.get(item)] = 1\n",
+    "        for item in row['directors']:\n",
+    "            directors[directors_encoder.get(item)] = 1\n",
+    "        budget = np.array(row['budget'])\n",
+    "        runtime = np.array(row['runtime'])\n",
+    "        year = np.array(row['year'])\n",
+    "        vote_average = np.array(row['vote_average'])\n",
+    "        preprocessed_data[index] = np.hstack((cast, directors, budget, runtime, year, vote_average))\n",
+    "    return preprocessed_data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# message_embeddings = embed([data_selected.iloc[0]['overview']])\n",
-    "# print(message_embeddings)"
+    "preprocessed_data = encode_data(first_preprocessing, cast_encoder, directors_encoder)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([[   0. ,    0. ,    0. , ...,  162. , 2009. ,    7.2],\n",
+       "        [   0. ,    0. ,    0. , ...,  169. , 2007. ,    6.9],\n",
+       "        [   0. ,    0. ,    0. , ...,  148. , 2015. ,    6.3],\n",
+       "        ...,\n",
+       "        [   0. ,    0. ,    0. , ...,  111. , 1997. ,    7.4],\n",
+       "        [   0. ,    0. ,    0. , ...,   77. , 2004. ,    6.9],\n",
+       "        [   0. ,    0. ,    0. , ...,   81. , 1992. ,    6.6]]), (3517, 8262))"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "preprocessed_data, preprocessed_data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.save('preprocessed_data.npy', preprocessed_data)"
    ]
   },
   {
