Training code added

--- a/DataPreprocessing.ipynb
+++ b/DataPreprocessing.ipynb
@@ -8,9 +8,9 @@
    "source": [
     "# USE for Overviews\n",
     "# Filmweb example data test\n",
-    "# XGBoost Regressor with GPU\n",
     "# Choose features based on correlations from article\n",
-    "# Dataset from the same article"
+    "# Dataset from the same article\n",
+    "# PCA for feature extraction"
    ]
   },
   {
