--- a/Training.ipynb
+++ b/Training.ipynb
@@ -2,18 +2,30 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "import pickle\n",
+    "import xgboost as xgb\n",
     "\n",
-    "import xgboost as xgb"
+    "from sklearn.model_selection import train_test_split, GridSearchCV\n",
+    "from sklearn.metrics import mean_squared_error, r2_score"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rand = np.random.RandomState(34215)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -37,7 +49,7 @@
        "        [   0. ,    0. ,    0. , ...,   81. , 1992. ,    6.6]]), (3517, 8262))"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -48,10 +60,176 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = data[:, :-1]\n",
+    "y = data[:, -1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Parameter optimization\n",
+      "Fitting 3 folds for each of 9 candidates, totalling 27 fits\n",
+      "[CV] max_depth=2, n_estimators=50 ....................................\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\jmay2\\.conda\\envs\\machine-learning\\lib\\site-packages\\sklearn\\model_selection\\_split.py:1978: FutureWarning: The default value of cv will change from 3 to 5 in version 0.22. Specify it explicitly to silence this warning.\n",
+      "  warnings.warn(CV_WARNING, FutureWarning)\n",
+      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[CV] ..................... max_depth=2, n_estimators=50, total=   4.3s\n",
+      "[CV] max_depth=2, n_estimators=50 ....................................\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=1)]: Done   1 out of   1 | elapsed:    4.2s remaining:    0.0s\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[CV] ..................... max_depth=2, n_estimators=50, total=   5.1s\n",
+      "[CV] max_depth=2, n_estimators=50 ....................................\n",
+      "[CV] ..................... max_depth=2, n_estimators=50, total=   4.2s\n",
+      "[CV] max_depth=2, n_estimators=100 ...................................\n",
+      "[CV] .................... max_depth=2, n_estimators=100, total=   5.2s\n",
+      "[CV] max_depth=2, n_estimators=100 ...................................\n",
+      "[CV] .................... max_depth=2, n_estimators=100, total=   4.6s\n",
+      "[CV] max_depth=2, n_estimators=100 ...................................\n",
+      "[CV] .................... max_depth=2, n_estimators=100, total=   5.0s\n",
+      "[CV] max_depth=2, n_estimators=200 ...................................\n",
+      "[CV] .................... max_depth=2, n_estimators=200, total=   5.9s\n",
+      "[CV] max_depth=2, n_estimators=200 ...................................\n",
+      "[CV] .................... max_depth=2, n_estimators=200, total=   5.8s\n",
+      "[CV] max_depth=2, n_estimators=200 ...................................\n",
+      "[CV] .................... max_depth=2, n_estimators=200, total=   5.8s\n",
+      "[CV] max_depth=4, n_estimators=50 ....................................\n",
+      "[CV] ..................... max_depth=4, n_estimators=50, total=   5.2s\n",
+      "[CV] max_depth=4, n_estimators=50 ....................................\n",
+      "[CV] ..................... max_depth=4, n_estimators=50, total=   5.6s\n",
+      "[CV] max_depth=4, n_estimators=50 ....................................\n",
+      "[CV] ..................... max_depth=4, n_estimators=50, total=   5.3s\n",
+      "[CV] max_depth=4, n_estimators=100 ...................................\n",
+      "[CV] .................... max_depth=4, n_estimators=100, total=   6.8s\n",
+      "[CV] max_depth=4, n_estimators=100 ...................................\n",
+      "[CV] .................... max_depth=4, n_estimators=100, total=   6.7s\n",
+      "[CV] max_depth=4, n_estimators=100 ...................................\n",
+      "[CV] .................... max_depth=4, n_estimators=100, total=   6.4s\n",
+      "[CV] max_depth=4, n_estimators=200 ...................................\n",
+      "[CV] .................... max_depth=4, n_estimators=200, total=   9.4s\n",
+      "[CV] max_depth=4, n_estimators=200 ...................................\n",
+      "[CV] .................... max_depth=4, n_estimators=200, total=   9.1s\n",
+      "[CV] max_depth=4, n_estimators=200 ...................................\n",
+      "[CV] .................... max_depth=4, n_estimators=200, total=   9.9s\n",
+      "[CV] max_depth=6, n_estimators=50 ....................................\n",
+      "[CV] ..................... max_depth=6, n_estimators=50, total=   7.5s\n",
+      "[CV] max_depth=6, n_estimators=50 ....................................\n",
+      "[CV] ..................... max_depth=6, n_estimators=50, total=   6.5s\n",
+      "[CV] max_depth=6, n_estimators=50 ....................................\n",
+      "[CV] ..................... max_depth=6, n_estimators=50, total=   6.9s\n",
+      "[CV] max_depth=6, n_estimators=100 ...................................\n",
+      "[CV] .................... max_depth=6, n_estimators=100, total=   9.4s\n",
+      "[CV] max_depth=6, n_estimators=100 ...................................\n",
+      "[CV] .................... max_depth=6, n_estimators=100, total=   8.8s\n",
+      "[CV] max_depth=6, n_estimators=100 ...................................\n",
+      "[CV] .................... max_depth=6, n_estimators=100, total=   9.6s\n",
+      "[CV] max_depth=6, n_estimators=200 ...................................\n",
+      "[CV] .................... max_depth=6, n_estimators=200, total=  13.5s\n",
+      "[CV] max_depth=6, n_estimators=200 ...................................\n",
+      "[CV] .................... max_depth=6, n_estimators=200, total=  12.8s\n",
+      "[CV] max_depth=6, n_estimators=200 ...................................\n",
+      "[CV] .................... max_depth=6, n_estimators=200, total=  13.5s\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=1)]: Done  27 out of  27 | elapsed:  3.3min finished\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.23671996367546547\n",
+      "{'max_depth': 4, 'n_estimators': 100}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Parameter optimization\")\n",
+    "xgb_model = xgb.XGBRegressor(tree_method='gpu_hist', gpu_id=0, objective='reg:squarederror')\n",
+    "clf = GridSearchCV(xgb_model,\n",
+    "                   {'max_depth': [2,4,6],\n",
+    "                    'n_estimators': [50,100,200]}, cv=3, verbose=2)\n",
+    "clf.fit(X_train,y_train, verbose=False)\n",
+    "print(clf.best_score_)\n",
+    "print(clf.best_params_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.5945348632837225\n",
+      "0.2680816295703452\n"
+     ]
+    }
+   ],
+   "source": [
+    "predictions = clf.best_estimator_.predict(X_test)\n",
+    "actuals = y_test\n",
+    "print(mean_squared_error(actuals, predictions))\n",
+    "print(r2_score(actuals, predictions))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# print(\"Pickling model\")\n",
+    "# pickle.dump(clf, open(\"best_movies.pkl\", \"wb\"))\n",
+    "# clf2 = pickle.load(open(\"best_movies.pkl\", \"rb\"))"
+   ]
   }
  ],
  "metadata": {
