Testing bigger dataset

--- a/Training.ipynb
+++ b/Training.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,11 +25,21 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_old = np.load('preprocessed_data.npy')\n",
+    "data_new = np.load('preprocessed_data_new.npy')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = np.load('preprocessed_data.npy')"
+    "data = data_new"
    ]
   },
   {
@@ -40,13 +50,19 @@
     {
      "data": {
       "text/plain": [
-       "(array([[   0. ,    0. ,    0. , ...,  162. , 2009. ,    7.2],\n",
-       "        [   0. ,    0. ,    0. , ...,  169. , 2007. ,    6.9],\n",
-       "        [   0. ,    0. ,    0. , ...,  148. , 2015. ,    6.3],\n",
+       "(array([[0.000e+00, 0.000e+00, 0.000e+00, ..., 1.240e+02, 2.015e+03,\n",
+       "         6.500e+00],\n",
+       "        [0.000e+00, 0.000e+00, 0.000e+00, ..., 1.200e+02, 2.015e+03,\n",
+       "         7.100e+00],\n",
+       "        [0.000e+00, 0.000e+00, 0.000e+00, ..., 1.190e+02, 2.015e+03,\n",
+       "         6.300e+00],\n",
        "        ...,\n",
-       "        [   0. ,    0. ,    0. , ...,  111. , 1997. ,    7.4],\n",
-       "        [   0. ,    0. ,    0. , ...,   77. , 2004. ,    6.9],\n",
-       "        [   0. ,    0. ,    0. , ...,   81. , 1992. ,    6.6]]), (3517, 8262))"
+       "        [0.000e+00, 0.000e+00, 0.000e+00, ..., 1.000e+02, 1.966e+03,\n",
+       "         6.700e+00],\n",
+       "        [0.000e+00, 0.000e+00, 0.000e+00, ..., 9.000e+01, 1.966e+03,\n",
+       "         6.100e+00],\n",
+       "        [0.000e+00, 0.000e+00, 0.000e+00, ..., 7.400e+01, 1.966e+03,\n",
+       "         1.500e+00]]), (5021, 1524))"
       ]
      },
      "execution_count": 5,
@@ -79,150 +95,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Parameter optimization\n",
-      "Fitting 3 folds for each of 9 candidates, totalling 27 fits\n",
-      "[CV] max_depth=2, n_estimators=50 ....................................\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\jmay2\\.conda\\envs\\machine-learning\\lib\\site-packages\\sklearn\\model_selection\\_split.py:1978: FutureWarning: The default value of cv will change from 3 to 5 in version 0.22. Specify it explicitly to silence this warning.\n",
-      "  warnings.warn(CV_WARNING, FutureWarning)\n",
-      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[CV] ..................... max_depth=2, n_estimators=50, total=   4.3s\n",
-      "[CV] max_depth=2, n_estimators=50 ....................................\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Parallel(n_jobs=1)]: Done   1 out of   1 | elapsed:    4.2s remaining:    0.0s\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[CV] ..................... max_depth=2, n_estimators=50, total=   5.1s\n",
-      "[CV] max_depth=2, n_estimators=50 ....................................\n",
-      "[CV] ..................... max_depth=2, n_estimators=50, total=   4.2s\n",
-      "[CV] max_depth=2, n_estimators=100 ...................................\n",
-      "[CV] .................... max_depth=2, n_estimators=100, total=   5.2s\n",
-      "[CV] max_depth=2, n_estimators=100 ...................................\n",
-      "[CV] .................... max_depth=2, n_estimators=100, total=   4.6s\n",
-      "[CV] max_depth=2, n_estimators=100 ...................................\n",
-      "[CV] .................... max_depth=2, n_estimators=100, total=   5.0s\n",
-      "[CV] max_depth=2, n_estimators=200 ...................................\n",
-      "[CV] .................... max_depth=2, n_estimators=200, total=   5.9s\n",
-      "[CV] max_depth=2, n_estimators=200 ...................................\n",
-      "[CV] .................... max_depth=2, n_estimators=200, total=   5.8s\n",
-      "[CV] max_depth=2, n_estimators=200 ...................................\n",
-      "[CV] .................... max_depth=2, n_estimators=200, total=   5.8s\n",
-      "[CV] max_depth=4, n_estimators=50 ....................................\n",
-      "[CV] ..................... max_depth=4, n_estimators=50, total=   5.2s\n",
-      "[CV] max_depth=4, n_estimators=50 ....................................\n",
-      "[CV] ..................... max_depth=4, n_estimators=50, total=   5.6s\n",
-      "[CV] max_depth=4, n_estimators=50 ....................................\n",
-      "[CV] ..................... max_depth=4, n_estimators=50, total=   5.3s\n",
-      "[CV] max_depth=4, n_estimators=100 ...................................\n",
-      "[CV] .................... max_depth=4, n_estimators=100, total=   6.8s\n",
-      "[CV] max_depth=4, n_estimators=100 ...................................\n",
-      "[CV] .................... max_depth=4, n_estimators=100, total=   6.7s\n",
-      "[CV] max_depth=4, n_estimators=100 ...................................\n",
-      "[CV] .................... max_depth=4, n_estimators=100, total=   6.4s\n",
-      "[CV] max_depth=4, n_estimators=200 ...................................\n",
-      "[CV] .................... max_depth=4, n_estimators=200, total=   9.4s\n",
-      "[CV] max_depth=4, n_estimators=200 ...................................\n",
-      "[CV] .................... max_depth=4, n_estimators=200, total=   9.1s\n",
-      "[CV] max_depth=4, n_estimators=200 ...................................\n",
-      "[CV] .................... max_depth=4, n_estimators=200, total=   9.9s\n",
-      "[CV] max_depth=6, n_estimators=50 ....................................\n",
-      "[CV] ..................... max_depth=6, n_estimators=50, total=   7.5s\n",
-      "[CV] max_depth=6, n_estimators=50 ....................................\n",
-      "[CV] ..................... max_depth=6, n_estimators=50, total=   6.5s\n",
-      "[CV] max_depth=6, n_estimators=50 ....................................\n",
-      "[CV] ..................... max_depth=6, n_estimators=50, total=   6.9s\n",
-      "[CV] max_depth=6, n_estimators=100 ...................................\n",
-      "[CV] .................... max_depth=6, n_estimators=100, total=   9.4s\n",
-      "[CV] max_depth=6, n_estimators=100 ...................................\n",
-      "[CV] .................... max_depth=6, n_estimators=100, total=   8.8s\n",
-      "[CV] max_depth=6, n_estimators=100 ...................................\n",
-      "[CV] .................... max_depth=6, n_estimators=100, total=   9.6s\n",
-      "[CV] max_depth=6, n_estimators=200 ...................................\n",
-      "[CV] .................... max_depth=6, n_estimators=200, total=  13.5s\n",
-      "[CV] max_depth=6, n_estimators=200 ...................................\n",
-      "[CV] .................... max_depth=6, n_estimators=200, total=  12.8s\n",
-      "[CV] max_depth=6, n_estimators=200 ...................................\n",
-      "[CV] .................... max_depth=6, n_estimators=200, total=  13.5s\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Parallel(n_jobs=1)]: Done  27 out of  27 | elapsed:  3.3min finished\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.23671996367546547\n",
-      "{'max_depth': 4, 'n_estimators': 100}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"Parameter optimization\")\n",
     "xgb_model = xgb.XGBRegressor(tree_method='gpu_hist', gpu_id=0, objective='reg:squarederror')\n",
     "clf = GridSearchCV(xgb_model,\n",
     "                   {'max_depth': [2,4,6],\n",
-    "                    'n_estimators': [50,100,200]}, cv=3, verbose=2)\n",
-    "clf.fit(X_train,y_train, verbose=False)\n",
+    "                    'n_estimators': [50,100,200],\n",
+    "                    'lambda': [1, 2, 3],\n",
+    "                    'alpha': [0, 1, 2],\n",
+    "                    'eta': [0.3, 0.5, 0.7]},\n",
+    "                    cv=3, verbose=2)\n",
+    "clf.fit(X_train, y_train, verbose=False)\n",
     "print(clf.best_score_)\n",
     "print(clf.best_params_)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Best GridSearch score and params\n",
+    "# 0.3274465860125423\n",
+    "# {'alpha': 0, 'eta': 0.3, 'lambda': 1, 'max_depth': 4, 'n_estimators': 200}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.5945348632837225\n",
-      "0.2680816295703452\n"
+      "MSE: 0.5137510044416175\n",
+      "R2: 0.312384126617107\n"
      ]
     }
    ],
    "source": [
     "predictions = clf.best_estimator_.predict(X_test)\n",
     "actuals = y_test\n",
-    "print(mean_squared_error(actuals, predictions))\n",
-    "print(r2_score(actuals, predictions))"
+    "print('MSE: {}'.format(mean_squared_error(actuals, predictions)))\n",
+    "print('R2: {}'.format(r2_score(actuals, predictions)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xg_reg = xgb.XGBRegressor(tree_method='gpu_hist', gpu_id=0, objective='reg:squarederror',\n",
+    "                max_depth = 4, alpha = 0, reg_lambda = 1, eta = 0.3, n_estimators = 200)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xg_reg.fit(X_train, y_train)\n",
+    "preds = xg_reg.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MSE: 0.5137510044416175\n",
+      "R2: 0.312384126617107\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('MSE: {}'.format(mean_squared_error(actuals, preds)))\n",
+    "print('R2: {}'.format(r2_score(actuals, preds)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,6 +194,13 @@
     "# pickle.dump(clf, open(\"best_movies.pkl\", \"wb\"))\n",
     "# clf2 = pickle.load(open(\"best_movies.pkl\", \"rb\"))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
