Model evaluation added

--- a/DataPreprocessingNewDataset.ipynb
+++ b/DataPreprocessingNewDataset.ipynb
@@ -6,16 +6,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Choose features based on correlations from article\n",
-    "# PCA for feature extraction"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 74,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "import pandas as pd\n",
     "import re\n",
     "import os\n",
@@ -34,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +264,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -455,7 +445,7 @@
        "4  1506249360      137           7.3        2947  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -466,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -478,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -515,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -532,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -556,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -565,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -689,7 +679,7 @@
        "4           7.3  "
       ]
      },
-     "execution_count": 84,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -700,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -709,7 +699,7 @@
        "(9171, 2298, 4486, 20)"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -720,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -731,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -742,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -852,6 +842,66 @@
    ],
    "source": [
     "np.unique(preprocessed_data[0], return_counts=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(500, 500, 500, 20)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(cast_encoder), len(directors_encoder), len(companies_encoder), len(genres_encoder)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Runtime\n",
+      "Drama\n",
+      "Science Fiction\n",
+      "Adventure\n",
+      "Christopher Lloyd\n",
+      "Horror\n",
+      "Charlie Sheen\n",
+      "Dan Hedaya\n",
+      "Documentary\n",
+      "DC Comics\n"
+     ]
+    }
+   ],
+   "source": [
+    "for feature in [1521, 1515, 1502, 1516,  311, 1514,  354,  445, 1508, 1051]:\n",
+    "    if 0 <= feature <= 499:\n",
+    "        print(list(cast_encoder.keys())[list(cast_encoder.values()).index(feature)])\n",
+    "    elif 500 <= feature <= 999:\n",
+    "        print(list(directors_encoder.keys())[list(directors_encoder.values()).index(feature-500)])\n",
+    "    elif 1000 <= feature <= 1499:\n",
+    "        print(list(companies_encoder.keys())[list(companies_encoder.values()).index(feature-1000)])\n",
+    "    elif 1500 <= feature <= 1519:\n",
+    "        print(list(genres_encoder.keys())[list(genres_encoder.values()).index(feature-1500)])\n",
+    "    elif feature == 1520:\n",
+    "        print('Budget')\n",
+    "    elif feature == 1521:\n",
+    "        print('Runtime')\n",
+    "    elif feature == 1522:\n",
+    "        print('Year')"
    ]
   },
   {
