--- a/Training.ipynb
+++ b/Training.ipynb
@@ -126,6 +126,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "actuals = y_test"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 24,
    "metadata": {},
    "outputs": [
@@ -140,14 +149,13 @@
    ],
    "source": [
     "predictions = clf.best_estimator_.predict(X_test)\n",
-    "actuals = y_test\n",
     "print('MSE: {}'.format(mean_squared_error(actuals, predictions)))\n",
     "print('R2: {}'.format(r2_score(actuals, predictions)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -186,13 +194,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pickling model\n"
+     ]
+    }
+   ],
    "source": [
-    "# print(\"Pickling model\")\n",
-    "# pickle.dump(clf, open(\"best_movies.pkl\", \"wb\"))\n",
-    "# clf2 = pickle.load(open(\"best_movies.pkl\", \"rb\"))"
+    "print(\"Pickling model\")\n",
+    "pickle.dump(xg_reg, open(\"best_movies.pkl\", \"wb\"))\n",
+    "clf2 = pickle.load(open(\"best_movies.pkl\", \"rb\"))"
    ]
   },
   {
